--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "^0.71.6",
     "react-native-image-picker": "^5.3.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-navigation": "^4.4.4",
