--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-stars": "^1.2.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "styled-components": "^5.3.10"
   },
@@ -38,6 +41,8 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-star-rating": "^1.1.2",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
