--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "^0.71.6",
