--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "^0.71.6",
     "react-native-image-picker": "^5.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
@@ -59,5 +60,5 @@
   "jest": {
     "preset": "react-native"
   },
-  "proxy":"http://localhost:8080"
+  "proxy": "http://localhost:8080"
 }
