--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,7 +154,8 @@ dependencies {
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
     implementation project(':react-native-splash-screen')
-
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+    
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
