--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
@@ -26,11 +27,13 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "^0.71.6",
-    "react-native-image-picker": "^5.3.1",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-picker": "^5.6.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-picker-select": "^8.0.4",
-    "react-native-safe-area-context": "^4.5.2",
-    "react-native-screens": "^3.20.0",
+    "react-native-reanimated": "^2.17.0",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-stars": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
@@ -43,6 +46,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/babel__core": "^7.20.1",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-native-star-rating": "^1.1.2",
